bug fixed: colored bg when printing on mobile browsers

--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -69,9 +69,6 @@ $colorFontGray: #8c9198;
   .section-to-exclude {
     display: none;
   }
-  #root {
-    background-color: white;
-  }
   .default-app {
     background-color: white;
   }
